--- a/examples/03-fetch/index.html
+++ b/examples/03-fetch/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <button id="fetchTodos">Fetch Todos</button>
-    <ul id="todolist"></ul>
+    <ul id="todoList"></ul>
     <script src="index.js"></script>
   </body>
 </html>
